# Aegis

./: .gitignore  CMakeLists.txt  README.md  resource.h  update.rc
include/: cloudtransfer.h  dtypes.h  lookscreen.h  sysinfo.h  usecommands.h  utils.h
src/: cloudtransfer.c  lookscreen.c  main.c  sysinfo.c  usecommands.c  utils.cpp
